RESOLVED FIXED86025
RTL and vertical text documents do not scroll properly with the new tiled scrolling model
https://bugs.webkit.org/show_bug.cgi?id=86025
Summary RTL and vertical text documents do not scroll properly with the new tiled scr...
Beth Dakin
Reported 2012-05-09 15:37:52 PDT
The new tiles scrolling model does no work well on RTL and vertical text pages. <rdar://problem/11077589>
Attachments
Patch (10.46 KB, patch)
2012-05-09 15:46 PDT, Beth Dakin
mitz: review+
Beth Dakin
Comment 1 2012-05-09 15:46:17 PDT
Beth Dakin
Comment 2 2012-05-09 16:05:42 PDT
Note You need to log in before you can comment on or make changes to this bug.