Source/WebCore/page/scrolling/ScrollingTreeNode.h
@@ -65,11 +65,14 @@ protected:
 
     bool canHaveScrollbars() const { return m_horizontalScrollbarMode != ScrollbarAlwaysOff || m_verticalScrollbarMode != ScrollbarAlwaysOff; }
 
+    const IntPoint& scrollOrigin() const { return m_scrollOrigin; }
+
 private:
     ScrollingTree* m_scrollingTree;
 
     IntRect m_viewportRect;
     IntSize m_contentsSize;
+    IntPoint m_scrollOrigin;
 
     bool m_shouldUpdateScrollLayerPositionOnMainThread;
 
