third_party/WebKit/Source/WebCore/page/scrolling/ScrollingCoordinator.cpp
@@ -150,6 +150,7 @@ void ScrollingCoordinator::frameViewLayoutUpdated(FrameView* frameView)
     scrollParameters.horizontalScrollbarMode = frameView->horizontalScrollbarMode();
     scrollParameters.verticalScrollbarMode = frameView->verticalScrollbarMode();
 
+    scrollParameters.scrollOrigin = frameView->scrollOrigin();
     scrollParameters.viewportRect = IntRect(IntPoint(), frameView->visibleContentRect().size());
     scrollParameters.contentsSize = frameView->contentsSize();
 
@@ -361,6 +362,7 @@ void ScrollingCoordinator::setScrollParameters(const ScrollParameters& scrollPar
     m_scrollingTreeState->setHorizontalScrollbarMode(scrollParameters.horizontalScrollbarMode);
     m_scrollingTreeState->setVerticalScrollbarMode(scrollParameters.verticalScrollbarMode);
 
+    m_scrollingTreeState->setScrollOrigin(scrollParameters.scrollOrigin);
     m_scrollingTreeState->setViewportRect(scrollParameters.viewportRect);
     m_scrollingTreeState->setContentsSize(scrollParameters.contentsSize);
     scheduleTreeStateCommit();
